--- a/root/css/home.css
+++ b/root/css/home.css
@@ -5,10 +5,10 @@ body{
     height: 100vh;
 
 }
-#searchDiv{
+#inputDiv{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 
     margin-top: 15vh;
@@ -18,6 +18,10 @@ body{
 
     background-color:coral;
     border-radius: 20px 20px 0px 0px;
+}
+#optionButton{
+    height: 50%;
+    font-size: 1.5rem;
 }
 input{
     height: 50px;
@@ -29,7 +33,7 @@ input{
     
 }
 #addItem{
-    margin-left: 15px;
+    
     height: 50px;
     width: 5vw;
 
@@ -41,6 +45,10 @@ input{
     max-height: 700px; /* <= limite máximo */
     background-color: antiquewhite;
     overflow-y: auto;
+
+    padding-bottom: 40px;
+    padding-top: 20px;
+    border-radius: 0px 0px 15px 15px;
 }
 #list{
     display: flex;
@@ -52,11 +60,41 @@ input{
 }
 
 .item{
-
-    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
      width: 45vw;
     
     height: 100px;
 
-    background-color: black;
+    background-color: rgb(216, 95, 95);
+    border-style: solid;
+    
+    border-width: 0px 5px 0px 0px;
+    border-radius: 5px;
+}
+.textDiv{
+    height: 70%;
+    width: 70%;
+    overflow: hidden;
+    background-color: aliceblue;
+    font-size: 1.5rem;
+}
+.buttonDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    align-items: center;
+    height: 100%;
+    width: 20%;
+
+    margin-left: 20px;
+    background-color: aqua;
+}
+button{
+    width: 70%;
+    height: 40%;
+
+    font-size: 1.5rem;
 }
