--- a/root/css/home.css
+++ b/root/css/home.css
@@ -19,7 +19,7 @@ body{
     background-color:coral;
     border-radius: 20px 20px 0px 0px;
 }
-#optionButton{
+#prioritySelect{
     height: 50%;
     font-size: 1.5rem;
 }
@@ -49,7 +49,7 @@ input{
     min-width: 300px;
     
 }
-#addItem{
+#addTask{
     
     height: 50px;
     width: 5vw;
@@ -59,10 +59,10 @@ input{
 #itemsDiv{
     width: 50vw;
     min-width: 600px;
-    max-height: 700px; /* <= limite máximo */
+    max-height: 600px;
     background-color: antiquewhite;
-    overflow-y: auto;
-
+    overflow-x: auto;
+    
     padding-bottom: 40px;
     padding-top: 20px;
     border-radius: 0px 0px 15px 15px;
@@ -99,7 +99,7 @@ input{
     justify-content: center;
     
     background-color: aliceblue;
-    font-size: 1.35rem;
+    font-size: 1.5rem;
 }
 .textDiv p{
     overflow-wrap: break-word; /* Quebra palavra se for necessário */
