--- a/root/css/home.css
+++ b/root/css/home.css
@@ -1,6 +1,6 @@
 body{
     display: flex;
-        flex-direction: column;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
 
@@ -10,21 +10,89 @@ body{
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-
-    margin-top: 15vh;
-    width: 50vw;
-    min-width: 450px;
-    height: 80px;
-
     background-color:coral;
     border-radius: 20px 20px 0px 0px;
 }
+
+#inputDiv {
+    position: relative;
+}
+
+#charCount {
+    position: absolute;
+
+    bottom: 0;
+    right: 0;  
+    margin: 2px;
+    margin-right: 5px;
+    
+    color: rgba(0,0,0,0.5);
+
+    pointer-events: none; 
+    user-select: none;
+}
+input, #addTask{
+    height: 50px;
+}
+
+#itemsDiv{
+    
+    background-color: antiquewhite;
+    overflow-x: auto;
+    
+    padding-bottom: 40px;
+    padding-top: 20px;
+    border-radius: 0px 0px 15px 15px;
+}
+#list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+
+}
+
+.item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+
+    
+    height: 100px;
+
+    background-color: rgb(216, 95, 95);
+    border-style: solid;
+    
+    border-width: 0px 5px 0px 0px;
+    border-radius: 5px;
+}
+.textDiv{
+    height: 70%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    background-color: aliceblue;
+    
+}
+.textDiv p{
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+}
+
+@media (min-width: 1650px) {
+  #creationDiv{ 
+    width: 50vw;
+    min-width: 950px;
+    height: 80px;
+}
+   
 #prioritySelect{
     height: 50%;
     font-size: 1.5rem;
-}
-#inputDiv {
-    position: relative;
 }
 
 #charCount {
@@ -53,57 +121,12 @@ input{
     
     height: 50px;
     width: 5vw;
-
+    min-width: 100px;
     font-size: 1.25rem;
 }
-#itemsDiv{
-    width: 50vw;
-    min-width: 600px;
-    max-height: 600px;
-    background-color: antiquewhite;
-    overflow-x: auto;
-    
-    padding-bottom: 40px;
-    padding-top: 20px;
-    border-radius: 0px 0px 15px 15px;
-}
-#list{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    width: 50vw;
-    min-width: 450px;
-}
-
-.item{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15px;
-     width: 45vw;
-    
-    height: 100px;
-
-    background-color: rgb(216, 95, 95);
-    border-style: solid;
-    
-    border-width: 0px 5px 0px 0px;
-    border-radius: 5px;
-}
 .textDiv{
-    height: 70%;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-    background-color: aliceblue;
+
     font-size: 1.5rem;
-}
-.textDiv p{
-    overflow-wrap: break-word; /* Quebra palavra se for necessário */
-    word-wrap: break-word;
 }
 .buttonDiv{
     display: flex;
@@ -112,7 +135,7 @@ input{
     align-items: center;
     height: 100%;
     width: 20%;
-
+    min-width: 150px;    
     margin-left: 20px;
     background-color: aqua;
 }
@@ -122,3 +145,347 @@ button{
 
     font-size: 1.5rem;
 }
+
+#itemsDiv{
+
+    min-width: 950px;
+    max-height: 600px;
+    
+}
+#list{
+    
+    min-width: 950px;
+}
+
+.item{
+    max-width: 90%;
+    min-width: 850px;
+}
+
+}
+@media (min-width: 1250px) and (max-width: 1650px) {
+  #creationDiv{ 
+    width: 50vw;
+    min-width: 950px;
+    height: 80px;
+}
+   
+#prioritySelect{
+    height: 50%;
+    font-size: 1.3rem;
+}
+
+#charCount {
+    position: absolute;
+
+    bottom: 0;
+    right: 0;  
+    margin: 2px;
+    margin-right: 5px;
+    font-size: 0.8rem;
+    color: rgba(0,0,0,0.5);
+
+    pointer-events: none; 
+    user-select: none;
+}
+input{
+    height: 50px;
+    width: 30vw;
+    
+    font-size: 1.3rem;
+
+    min-width: 500px;
+    
+}
+#addTask{
+    
+    height: 50px;
+    width: 5vw;
+    min-width: 90px;
+
+    font-size: 1.10rem;
+}
+.textDiv{
+
+    font-size: 1.3rem;
+}
+.buttonDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    height: 100%;
+    width: 20%;
+    min-width: 150px;
+    margin-left: 20px;
+    background-color: aqua;
+}
+button{
+    width: 70%;
+    height: 40%;
+
+    font-size: 1.3rem;
+}
+
+#itemsDiv{
+
+    min-width: 950px;
+    max-height: 600px;
+    
+}
+#list{
+    
+    min-width: 950px;
+}
+
+.item{
+    min-width: 850px;
+}
+
+}
+@media (min-width: 950px) and (max-width: 1250px) {
+  #creationDiv{ 
+    width: 50vw;
+    min-width: 850px;
+    height: 80px;
+}
+   
+#prioritySelect{
+    height: 50%;
+    font-size: 1.3rem;
+}
+
+#charCount {
+    position: absolute;
+
+    bottom: 0;
+    right: 0;  
+    margin: 2px;
+    margin-right: 5px;
+    font-size: 0.8rem;
+    color: rgba(0,0,0,0.5);
+
+    pointer-events: none; 
+    user-select: none;
+}
+input{
+    height: 50px;
+    width: 30vw;
+    
+    font-size: 1.3rem;
+
+    min-width: 500px;
+    
+}
+#addTask{
+    
+    height: 50px;
+    width: 5vw;
+    min-width: 90px;
+
+    font-size: 1.10rem;
+}
+.textDiv{
+
+    font-size: 1.3rem;
+}
+.buttonDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    height: 100%;
+    width: 20%;
+    min-width: 150px;
+    margin-left: 20px;
+    background-color: aqua;
+}
+button{
+    width: 70%;
+    height: 40%;
+
+    font-size: 1.3rem;
+}
+
+#itemsDiv{
+
+    min-width: 850px;
+    max-height: 600px;
+    
+}
+#list{
+    
+    min-width: 850px;
+}
+
+.item{
+    max-width: 80%;
+    min-width: 750px;
+}
+
+}
+@media (min-width: 750px) and (max-width: 950px) {
+  #creationDiv{ 
+    width: 50vw;
+    min-width: 750px;
+    height: 80px;
+}
+   
+#prioritySelect{
+    height: 50%;
+    font-size: 1.3rem;
+}
+
+#charCount {
+    position: absolute;
+
+    bottom: 0;
+    right: 0;  
+    margin: 2px;
+    margin-right: 5px;
+    font-size: 0.8rem;
+    color: rgba(0,0,0,0.5);
+
+    pointer-events: none; 
+    user-select: none;
+}
+input{
+    height: 50px;
+    width: 30vw;
+    
+    font-size: 1.3rem;
+
+    min-width: 400px;
+    
+}
+#addTask{
+    
+    height: 50px;
+    width: 5vw;
+    min-width: 90px;
+
+    font-size: 1.10rem;
+}
+.textDiv{
+    max-width: 50%;
+    font-size: 1.3rem;
+}
+.buttonDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    height: 100%;
+    width: 20%;
+    min-width: 150px;
+    margin-left: 20px;
+    background-color: aqua;
+}
+button{
+    width: 70%;
+    height: 40%;
+
+    font-size: 1.3rem;
+}
+
+#itemsDiv{
+    
+    min-width: 750px;
+    max-height: 600px;
+    
+}
+#list{
+    
+    min-width: 750px;
+}
+
+.item{
+    min-width: 650px;
+    max-width: 650px;
+}
+
+}
+@media (min-width: 450px) and (max-width: 750px) {
+  #creationDiv{ 
+    width: 80vw;
+    
+    height: 80px;
+}
+   
+#prioritySelect{
+    height: 50%;
+    font-size: 1.3rem;
+}
+
+#charCount {
+    position: absolute;
+
+    bottom: 0;
+    right: 0;  
+    margin: 2px;
+    margin-right: 5px;
+    font-size: 0.8rem;
+    color: rgba(0,0,0,0.5);
+
+    pointer-events: none; 
+    user-select: none;
+}
+input{
+    height: 50px;
+    width: 40vw;
+    
+    font-size: 1.3rem;
+
+    
+    
+}
+#addTask{
+    
+    height: 50px;
+    width: 5vw;
+    min-width: 70px;
+
+    font-size: 0.8rem;
+}
+.textDiv{
+    width: 50%;
+    font-size: 1rem;
+}
+.buttonDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    height: 100%;
+    width: 20%;
+    min-width: 150px;
+    margin-left: 20px;
+    background-color: aqua;
+}
+button{
+    width: 70%;
+    height: 40%;
+
+    font-size: 1.3rem;
+}
+
+#itemsDiv{
+
+    width: 80vw;
+    max-width: 80vw;
+    max-height: 600px;
+    
+}
+#list{
+    
+    max-width: 80vw;
+    width: 80vw;
+}
+
+.item{
+    width: 70vw;
+    max-width: 70vw;
+}
+
+}
+
